<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:paddingTop="25dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="14:2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/logo"
        android:layout_marginVertical="25dp"/>


    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/nunito_sans"
        android:gravity="bottom"
        android:letterSpacing="0.3"
        android:lineSpacingMultiplier="1.4"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintWidth_percent="0.7" />

    <TextView
        android:id="@+id/input_username"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="45dp"
        android:gravity="start"
        android:text="@string/username"
        android:textColor="@color/black"
        app:layout_constraintHeight_percent="0.03"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/title"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintWidth_percent="0.5" />

    <EditText
        android:id="@+id/inputbox_username"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.06"
        android:padding="10dp"
        android:gravity="center"
        android:textAlignment="textStart"
        app:layout_constraintTop_toBottomOf="@+id/input_username"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/input_username"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintEnd_toEndOf="@+id/title"
        android:background="@drawable/shapegrey"/>

    <TextView
        android:id="@+id/input_password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/nunito_sans"
        android:gravity="start"
        android:text="@string/password"
        android:textColor="@color/black"
        app:layout_constraintHeight_percent="0.03"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/inputbox_username"
        app:layout_constraintStart_toStartOf="@+id/inputbox_username"
        app:layout_constraintTop_toBottomOf="@+id/inputbox_username"
        app:layout_constraintWidth_percent="0.5" />

    <EditText
        android:id="@+id/inputbox_password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.06"
        android:padding="10dp"
        android:gravity="center"
        android:textAlignment="textStart"
        app:layout_constraintTop_toBottomOf="@+id/input_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/input_password"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintEnd_toEndOf="@+id/title"
        android:background="@drawable/shapegrey"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/forgotpassword"
        android:textColor="@color/red"
        android:textSize="12dp"
        android:background=""
        app:layout_constraintEnd_toEndOf="@+id/inputbox_password"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintTop_toBottomOf="@+id/inputbox_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_signin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.06"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/forgotpassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/inputbox_password"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintEnd_toEndOf="@+id/title"
        android:textAlignment="center"
        android:layout_marginTop="25dp"
        android:background="@drawable/shapered"
        android:text="@string/sigin"/>

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:fontFamily="@font/nunito_sans"
        android:gravity="center"
        android:text="@string/or"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_signin" />

    <ImageButton
        android:id="@+id/apple"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/apple"
        android:scaleType="fitCenter"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintWidth_percent="0.2"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/or"
        app:layout_constraintEnd_toStartOf="@id/or"/>

    <ImageButton
        android:id="@+id/google"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/google"
        android:scaleType="fitCenter"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintWidth_percent="0.2"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/or"
        app:layout_constraintStart_toEndOf="@id/or"
        android:layout_marginTop="6dp"/>

    <View
        android:id="@+id/boxblack"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/boxblack"
        app:layout_constraintWidth_percent="1"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintTop_toBottomOf="@id/apple"
        android:layout_marginTop="25dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.06"
        android:background="@drawable/shapewhite"
        app:layout_constraintTop_toTopOf="@id/boxblack"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintEnd_toEndOf="@id/title"
        android:text="@string/sigup"
        android:layout_marginTop="55dp"
        android:textColor="@color/red"/>






</androidx.constraintlayout.widget.ConstraintLayout>
