<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="14:2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/logo"
        android:layout_marginVertical="25dp"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/Profile"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/black"
        android:fontFamily="@font/nunito_sans"
        android:textSize="23dp"
        android:textStyle="bold"
        android:background="@drawable/shapered"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintEnd_toEndOf="@id/logo"
        app:layout_constraintStart_toStartOf="@id/logo"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/input_fullname"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:gravity="start"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/fullname"
        android:textColor="@color/black"
        app:layout_constraintHeight_percent="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintWidth_percent="0.7" />

    <EditText
        android:id="@+id/inputbox_fullname"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.06"
        android:gravity="bottom"
        app:layout_constraintTop_toBottomOf="@+id/input_fullname"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/input_fullname"
        app:layout_constraintStart_toStartOf="@+id/input_fullname"
        app:layout_constraintEnd_toEndOf="@+id/input_fullname"
        android:background="@drawable/shapeblack"/>

    <TextView
        android:id="@+id/input_username"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:gravity="start"
        android:text="@string/username"
        android:textColor="@color/black"
        android:fontFamily="@font/nunito_sans"
        app:layout_constraintHeight_percent="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputbox_fullname"
        app:layout_constraintWidth_percent="0.7" />

    <EditText
        android:id="@+id/inputbox_username"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.06"
        android:gravity="bottom"
        app:layout_constraintTop_toBottomOf="@+id/input_username"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/input_username"
        app:layout_constraintStart_toStartOf="@+id/input_username"
        app:layout_constraintEnd_toEndOf="@+id/input_username"
        android:background="@drawable/shapeblack"/>

    <TextView
        android:id="@+id/input_email"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:gravity="start"
        android:text="@string/email"
        android:fontFamily="@font/nunito_sans"
        android:textColor="@color/black"
        app:layout_constraintHeight_percent="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputbox_username"
        app:layout_constraintWidth_percent="0.7" />

    <EditText
        android:id="@+id/inputbox_email"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.06"
        android:gravity="bottom"
        app:layout_constraintTop_toBottomOf="@+id/input_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/input_email"
        app:layout_constraintStart_toStartOf="@+id/input_email"
        app:layout_constraintEnd_toEndOf="@+id/input_email"
        android:background="@drawable/shapeblack"/>

    <TextView
        android:id="@+id/input_password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:gravity="start"
        android:text="@string/password"
        android:fontFamily="@font/nunito_sans"
        android:textColor="@color/black"
        app:layout_constraintHeight_percent="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputbox_email"
        app:layout_constraintWidth_percent="0.7" />

    <EditText
        android:id="@+id/inputbox_password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.06"
        android:gravity="bottom"
        app:layout_constraintTop_toBottomOf="@+id/input_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/input_password"
        app:layout_constraintStart_toStartOf="@+id/input_password"
        app:layout_constraintEnd_toEndOf="@+id/input_password"
        android:background="@drawable/shapeblack"/>

    <TextView
        android:id="@+id/input_phone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:gravity="start"
        android:text="@string/phone"
        android:fontFamily="@font/nunito_sans"
        android:textColor="@color/black"
        app:layout_constraintHeight_percent="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputbox_password"
        app:layout_constraintWidth_percent="0.7" />

    <EditText
        android:id="@+id/inputbox_phone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.06"
        android:gravity="bottom"
        app:layout_constraintTop_toBottomOf="@+id/input_phone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/input_phone"
        app:layout_constraintStart_toStartOf="@+id/input_phone"
        app:layout_constraintEnd_toEndOf="@+id/input_phone"
        android:background="@drawable/shapeblack"/>

</androidx.constraintlayout.widget.ConstraintLayout>