<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="14:2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/logo"
        android:layout_marginTop="15dp"/>

    <View
        android:id="@+id/boxblack"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="1"
        app:layout_constraintHeight_percent="0.9"
        android:background="@drawable/boxblack"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintWidth_percent="0.5"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="@id/boxblack"
        app:layout_constraintRight_toRightOf="@id/boxblack"
        app:layout_constraintTop_toTopOf="@id/boxblack"
        app:layout_constraintStart_toStartOf="@id/boxblack"
        app:layout_constraintEnd_toEndOf="@id/boxblack"
        android:text="@string/sigup"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:fontFamily="@font/nunito_sans"
        android:textStyle="bold"
        android:letterSpacing="0.05"
        android:layout_marginTop="10dp"/>


    <TextView
        android:id="@+id/input_fullname"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:gravity="start"
        android:text="@string/fullname"
        android:textColor="@color/white"
        app:layout_constraintHeight_percent="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintWidth_percent="0.7" />

    <EditText
        android:id="@+id/inputbox_fullname"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.06"
        android:padding="10dp"
        android:gravity="center"
        android:textAlignment="textStart"
        app:layout_constraintTop_toBottomOf="@+id/input_fullname"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/input_fullname"
        app:layout_constraintStart_toStartOf="@+id/input_fullname"
        app:layout_constraintEnd_toEndOf="@+id/input_fullname"
        android:background="@drawable/shapewhite"/>

    <TextView
        android:id="@+id/input_username"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:gravity="start"
        android:text="@string/username"
        android:textColor="@color/white"
        app:layout_constraintHeight_percent="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputbox_fullname"
        app:layout_constraintWidth_percent="0.7" />

    <EditText
        android:id="@+id/inputbox_username"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.06"
        android:padding="10dp"
        android:gravity="center"
        android:textAlignment="textStart"
        app:layout_constraintTop_toBottomOf="@+id/input_username"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/input_username"
        app:layout_constraintStart_toStartOf="@+id/input_username"
        app:layout_constraintEnd_toEndOf="@+id/input_username"
        android:background="@drawable/shapewhite"/>

    <TextView
        android:id="@+id/input_email"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:gravity="start"
        android:text="@string/email"
        android:textColor="@color/white"
        app:layout_constraintHeight_percent="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputbox_username"
        app:layout_constraintWidth_percent="0.7" />

    <EditText
        android:id="@+id/inputbox_email"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.06"
        android:padding="10dp"
        android:gravity="center"
        android:textAlignment="textStart"
        app:layout_constraintTop_toBottomOf="@+id/input_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/input_email"
        app:layout_constraintStart_toStartOf="@+id/input_email"
        app:layout_constraintEnd_toEndOf="@+id/input_email"
        android:background="@drawable/shapewhite"/>

    <TextView
        android:id="@+id/input_password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:gravity="start"
        android:text="@string/password"
        android:textColor="@color/white"
        app:layout_constraintHeight_percent="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputbox_email"
        app:layout_constraintWidth_percent="0.7" />

    <EditText
        android:id="@+id/inputbox_password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.06"
        android:padding="10dp"
        android:gravity="center"
        android:textAlignment="textStart"
        app:layout_constraintTop_toBottomOf="@+id/input_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/input_password"
        app:layout_constraintStart_toStartOf="@+id/input_password"
        app:layout_constraintEnd_toEndOf="@+id/input_password"
        android:background="@drawable/shapewhite"/>

    <TextView
        android:id="@+id/input_phone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:gravity="start"
        android:text="@string/phone"
        android:textColor="@color/white"
        app:layout_constraintHeight_percent="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputbox_password"
        app:layout_constraintWidth_percent="0.7" />

    <EditText
        android:id="@+id/inputbox_phone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.06"
        android:padding="10dp"
        android:gravity="center"
        android:textAlignment="textStart"
        app:layout_constraintTop_toBottomOf="@+id/input_phone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/input_phone"
        app:layout_constraintStart_toStartOf="@+id/input_phone"
        app:layout_constraintEnd_toEndOf="@+id/input_phone"
        android:background="@drawable/shapewhite"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_signup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.06"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/inputbox_phone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/inputbox_phone"
        app:layout_constraintStart_toStartOf="@+id/input_phone"
        app:layout_constraintEnd_toEndOf="@+id/input_phone"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/shapered"
        android:text="@string/sigup"/>

</androidx.constraintlayout.widget.ConstraintLayout>